VZDEV/src/objects/CCPM_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_RE_Criteria_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Criteria ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Record</label>
        <referenceTo>CCPM_RERecord__c</referenceTo>
        <relationshipLabel>Criterias</relationshipLabel>
        <relationshipName>CCPM_RECriterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_fieldName__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_fieldType__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CCPM_fieldType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Does Not Contain</fullName>
                </value>
                <value>
                    <fullName>Starts With</fullName>
                </value>
                <value>
                    <fullName>Ends With</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
                <value>
                    <fullName>Greater Or Equal</fullName>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Less Or Equal</fullName>
                </value>
                <value>
                    <fullName>Is Null</fullName>
                </value>
                <value>
                    <fullName>Is Not Null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>CCPM_Rule__c</referenceTo>
        <relationshipLabel>Criterias</relationshipLabel>
        <relationshipName>CCPM_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_valueDate__c</fullName>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_valueDouble__c</fullName>
        <label>Value Double</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_valueText__c</fullName>
        <label>Value Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RE Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>